<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:elevation="6dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                app:menu="@menu/details_menu" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_jacket" />


                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/lateral_margin"
                    android:layout_marginVertical="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Classic jacket"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_vertical_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            tools:text="$80.00"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end|center_vertical"
                            android:drawableEnd="@drawable/ic_heart"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:gravity="center_vertical"
                            android:text="@string/main_save_item"
                            android:textColor="@color/black" />

                    </androidx.coordinatorlayout.widget.CoordinatorLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_size"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:background="@color/color_accent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/main_selector_size"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.coordinatorlayout.widget.CoordinatorLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_color"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginEnd="@dimen/lateral_margin"
                                tools:text="Blue"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                        </androidx.coordinatorlayout.widget.CoordinatorLayout>

                        <View
                            android:layout_width="@dimen/separator_size"
                            android:layout_height="match_parent"
                            android:background="@color/color_accent" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lateral_margin"
                            android:layout_weight="1"
                            android:text="@string/main_size_selector"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_size"
                        android:layout_marginBottom="@dimen/vertical_margin"
                        android:background="@color/color_accent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_description"
                            android:textSize="@dimen/small_text_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/half_vertical_margin"
                            android:text="@string/_23_ratings"
                            android:textColor="@color/black"
                            android:textSize="@dimen/small_text_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/rating_bar"
                            app:layout_constraintTop_toTopOf="parent" />

                        <include
                            android:id="@+id/rating_bar"
                            layout="@layout/custom_rating_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_margin"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a faucibus erat."
                        android:textColor="@color/black"
                        android:textSize="@dimen/description_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_size"
                        android:layout_marginVertical="@dimen/vertical_margin"
                        android:background="@color/color_accent" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/lateral_margin"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:backgroundTint="@color/color_accent"
                    android:text="@string/main_add_to_cart"
                    android:textAllCaps="false"
                    app:cornerRadius="0dp" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</layout>
